# ApexQuantAI

./: .gitignore  README.md  ask.py  backfill_bloomberg.py  backfill_research_universe.py  ingest.py  pin_embedder.py  pyproject.toml  quantai_doctor.py  render.yaml  research_runner.py  superior_pdf_ingest.py
artifacts/: bloomberg_learning_snapshot.json
artifacts/bloomberg_memory/: global_bloomberg_note_global_2026_03_26.json  global_bloomberg_note_global_2026_03_26.md  global_bloomberg_note_global_2026_03_27.json  (+21 more)
research_runs/: 20260327T015454Z_propose-a-theorem-linking-rough-volatility-roughness-to-realized-varianc.json  20260327T015542Z_propose-a-theorem-linking-rough-volatility-roughness-to-realized-varianc.json  20260327T015542Z_propose-a-theorem-linking-rough-volatility-roughness-to-realized-varianc.md  20260327T015813Z_reseach-how-to-deal-with-modifications-vs-indistingushablity-when-it-com.json  20260327T015813Z_reseach-how-to-deal-with-modifications-vs-indistingushablity-when-it-com.md  20260327T020749Z_propose-a-theorem-linking-rough-volatility-roughness-to-realized-varianc.json  20260327T020749Z_propose-a-theorem-linking-rough-volatility-roughness-to-realized-varianc.md  20260327T020850Z_research-how-to-deal-with-modifications-vs-indistinguishability-when-it.json  20260327T020850Z_research-how-to-deal-with-modifications-vs-indistinguishability-when-it.md  20260327T020921Z_extract-the-real-time-implied-volatility-surface-for-spx-options-expirin.json  20260327T020921Z_extract-the-real-time-implied-volatility-surface-for-spx-options-expirin.md
(+249 files in other folders)
